<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".SplashScreen.SplashScreen"
        android:background="@color/dfs_theme">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_dfs_logo"
            />

        <TextView
            android:id="@+id/appNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            android:layout_marginTop="30dp"
            android:text="@string/bihan_kisan_seva"
            android:textSize="24sp"
            android:textColor="@color/dfs_yellow"

            />


        <TextView
            android:id="@+id/selectLanguageTxtEng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appNameTxt"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/select_language_en"
            />

        <TextView
            android:id="@+id/selectLanguageTxtHind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectLanguageTxtEng"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"

            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/select_language_hi"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/hindiBtn"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:text="@string/hindi"
            android:textColor="@color/lang_btn_txt_color"
            android:background="@drawable/language_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectLanguageTxtHind" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BhojpuriBtn"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:text="@string/bhojpuri"

            android:background="@drawable/language_btn"
            app:layout_constraintStart_toEndOf="@+id/hindiBtn"
            app:layout_constraintTop_toBottomOf="@+id/selectLanguageTxtHind"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/MaithiliBtn"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:text="@string/Maithili"

            android:background="@drawable/language_btn"
            app:layout_constraintStart_toEndOf="@+id/BhojpuriBtn"
            app:layout_constraintTop_toBottomOf="@+id/selectLanguageTxtHind"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/EnglishBtn"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:text="@string/English"
            android:background="@drawable/language_btn"
            app:layout_constraintStart_toEndOf="@+id/MaithiliBtn"
            app:layout_constraintTop_toBottomOf="@+id/selectLanguageTxtHind"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
