<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Service.ServiceRequestMain">

        <include
            android:id="@+id/actionbar_account"
            layout="@layout/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/service_req_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:text="@string/service_request"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/actionbar_account"
            />

        <TextView
            android:id="@+id/text_service_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="45dp"
            android:text="@string/service_type"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/service_req_label"
            app:layout_constraintStart_toStartOf="parent"
            />

        <AutoCompleteTextView
            android:id="@+id/spinner_service_type"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="8dp"
            android:textSize="15sp"
            android:drawableEnd="@drawable/ic_down_arrow"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:editable="false"
            android:background="@drawable/grey_border_rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_service_type"
            />

        <TextView
            android:id="@+id/text_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/Service"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_service_type"
            app:layout_constraintStart_toStartOf="parent"
            />

        <AutoCompleteTextView
            android:id="@+id/spinner_services"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="8dp"
            android:textSize="15sp"
            android:drawableEnd="@drawable/ic_down_arrow"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"

            android:background="@drawable/grey_border_rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_services"
            />

        <TextView
            android:id="@+id/text_service_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/service_provider"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_services"
            app:layout_constraintStart_toStartOf="parent"
            />

        <AutoCompleteTextView
            android:id="@+id/spinner_service_provider"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="8dp"
            android:textSize="15sp"
            android:drawableEnd="@drawable/ic_down_arrow"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:background="@drawable/grey_border_rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_service_provider"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="1"
            android:text="@string/submit_request"
            android:textColor="@color/white"
            android:background="@color/theme_color"
            android:layout_marginEnd="20dp"
            android:enabled="false"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_service_provider" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
