<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_color_new">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@drawable/rounded_corner_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/enter_mobile_number_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/otp_verification"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/enter_four_digit_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/send_four_digit"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_mobile_number_txt" />


            <com.mukeshsolanki.OtpView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:textColor="@color/dark_grey"
                app:OtpItemCount="4"
                app:OtpItemSpacing="20dp"
                app:OtpViewType="rectangle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_four_digit_code" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/verify_continue"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@color/theme_color_new"
                android:drawablePadding="8dp"
                android:inputType="numberDecimal"
                android:text="@string/submit_btn"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/otp_view"
                app:layout_constraintEnd_toEndOf="@+id/otp_view"
                app:layout_constraintStart_toStartOf="@+id/otp_view" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
