<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dfs_theme">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@drawable/rounded_corner_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/enter_mobile_number_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/enter_mobile_number"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:backgroundTint="@color/dfs_Edittext_bottom"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/countryTxt"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dfs_Edittext_bottom"
                android:enabled="false"
                android:singleLine="true"
                android:text="@string/_91"
                app:layout_constraintEnd_toStartOf="@+id/phoneNumberEdtxt"
                app:layout_constraintTop_toBottomOf="@+id/enter_mobile_number_txt" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phoneNumberEdtxt"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:layout_marginEnd="20dp"
                android:inputType="number"
                android:backgroundTint="@color/dfs_Edittext_bottom"

                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_mobile_number_txt" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/generateOtp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="50dp"
                android:background="@color/dfs_theme"
                android:drawablePadding="8dp"
                android:inputType="numberDecimal"
                android:paddingHorizontal="30dp"
                android:text="@string/generate_otp"
                android:layout_marginTop="40dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberEdtxt"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
