<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

        <androidx.cardview.widget.CardView
            android:id="@+id/single_Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            android:elevation="10dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <LinearLayout
                    android:id="@+id/rlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/lview"
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:visibility="visible"
                        android:background="@color/theme_color" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingLeft="8dp">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            >

                            <TextView
                                android:id="@+id/text_service_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="bottom"
                                android:text="@string/service_number"
                                android:lines="2"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/text_view_service_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/text_service_number"
                                android:gravity="center_vertical"
                                android:lines="2"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/text_service_provider"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="bottom"
                                android:text="@string/service_provider"
                                android:layout_below="@+id/text_view_service_number"
                                android:lines="2"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/text_service_provider_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/text_service_provider"
                                android:gravity="center_vertical"
                                android:lines="2"
                                android:textColor="@color/black"
                                android:textSize="12sp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            >

                            <TextView
                                android:id="@+id/text_service_type_label"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="bottom"
                                android:text="@string/service_type"
                                android:lines="2"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/text_service_type_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/text_service_type_label"
                                android:gravity="center_vertical"
                                android:lines="2"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/text_status"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="bottom"
                                android:lines="2"
                                android:text="@string/status"
                                android:layout_below="@+id/text_service_type_value"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/text_status_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/text_status"
                                android:gravity="center"
                                android:text="@string/status"
                                android:textColor="@color/white"
                                android:background="@color/theme_color"
                                android:lines="2"
                                android:textSize="12sp" />
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            >

                            <TextView
                                android:id="@+id/text_service_label"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="bottom"
                                android:lines="2"
                                android:text="@string/Service"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/text_service_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/text_service_label"
                                android:gravity="center_vertical"
                                android:lines="2"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/dummy_label_two"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="bottom"
                                android:lines="2"
                                android:layout_below="@+id/text_service_value"
                                android:textSize="12sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/dummy_label_two"
                                android:gravity="center_vertical"
                                android:lines="2"
                                android:textSize="12sp" />
                        </RelativeLayout>

                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
